# gaokao_flet

./: .gitignore  buildozer.spec  buildozer.spec.bak  buildozer_gh.spec  main.py  main_cn.py  project_structure.txt  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  flet_apk.yml
utils/: db_helper.py
